<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/title_main"
        android:titleTextColor="@color/on_primary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <Button
                android:id="@+id/btnRuleSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_rule_setting"
                android:textColor="@color/on_primary"
                android:background="@null"/>

            <Button
                android:id="@+id/btnCustomRule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_custom_rule"
                android:textColor="@color/on_primary"
                android:background="@null"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExpressCards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_express_info"
        android:textSize="18sp"
        android:visibility="gone"/>

</LinearLayout>